--- a/app/src/main/res/layouts/waiting_list/layout/waiting_content_layout.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/waiting_content_layout.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp6"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <Spinner
@@ -18,19 +18,21 @@
             style="@style/SpinnerTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"></Spinner>
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <RelativeLayout
             android:id="@+id/hospitalDetailsLinearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dp8"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <com.rescribe.doctor.ui.customesViews.CircularImageView
                 android:id="@+id/bulletImageView"
                 android:layout_width="@dimen/dp8"
                 android:layout_height="@dimen/dp8"
+                android:layout_centerVertical="true"
                 android:layout_margin="@dimen/dp10"
                 android:background="@drawable/circular_bullet" />
 
@@ -55,7 +57,6 @@
                 android:layout_toRightOf="@id/clinicNameTextView"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:paddingTop="@dimen/dp3"
                 android:textColor="@color/clinic_address_color"
                 android:textSize="@dimen/sp13"
                 app:customFont="@string/roboto_medium"
@@ -65,17 +66,17 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp16"
+            android:padding="@dimen/dp8"
             android:src="@drawable/appointment_count_arrow_copy_2"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible" />
+
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/myRecyclerViewStyle"
-        android:background="@color/divider"
         tools:visibility="visible" />
 
 </LinearLayout>
