--- a/app/src/main/res/layout/trial2_layout.xml
+++ b/app/src/main/res/layout/trial2_layout.xml
@@ -145,8 +145,21 @@
                     android:visibility="gone"
                     app:customFont="@string/roboto_bold"
                     tools:text="03:20 pm"
-                    tools:visibility="gone" />
+                    tools:visibility="invisible" />
 
+                <ImageView
+                    android:id="@+id/waitingIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="13dp"
+                    android:layout_marginRight="13dp"
+                    android:layout_toLeftOf="@+id/appointmentTime"
+                    android:layout_toStartOf="@+id/appointmentTime"
+                    android:src="@drawable/waiting"
+                    android:visibility="gone"
+                    tools:ignore="ContentDescription"
+                    tools:visibility="visible" />
                 <ImageView
                     android:id="@+id/chatImageView"
                     android:layout_width="wrap_content"
