--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -264,10 +264,23 @@
                         android:padding="@dimen/dp5"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sp14"
-                        android:visibility="gone"
+                        android:visibility="invisible"
                         app:customFont="@string/roboto_bold"
                         tools:text="03:20 pm"
-                        tools:visibility="gone" />
+                        tools:visibility="invisible" />
+                    <ImageView
+                        android:id="@+id/waitingIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="13dp"
+                        android:layout_marginRight="13dp"
+                        android:layout_toLeftOf="@+id/appointmentTime"
+                        android:layout_toStartOf="@+id/appointmentTime"
+                        android:src="@drawable/waiting"
+                        android:visibility="gone"
+                        tools:ignore="ContentDescription"
+                        tools:visibility="visible" />
 
                     <ImageView
                         android:id="@+id/chatImageView"
