bug no 208,223,225,226 resolved

--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -61,4 +61,6 @@
     <dimen name="list_item_height">100dp</dimen>
     <dimen name="dp24">24dp</dimen>
     <dimen name="dp26">26dp</dimen>
+    <dimen name="dp130">130dp</dimen>
+
 </resources>
