--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -62,4 +62,5 @@
     <dimen name="dp24">24dp</dimen>
     <dimen name="dp26">26dp</dimen>
     <dimen name="dp86">86dp</dimen>
+    <dimen name="dp130">130dp</dimen>
 </resources>
