bug no 223,226 resolved

--- a/app/src/main/res/layouts/global_ui_for_connect/layout/services_item_textview.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/services_item_textview.xml
@@ -1,20 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <com.rescribe.doctor.ui.customesViews.CustomTextView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:customFont="@string/roboto_regular"
-        android:paddingBottom="@dimen/dp4"
-        android:paddingEnd="@dimen/dp10"
-        android:paddingStart="@dimen/dp10"
-        android:textColor="@color/about_doctor_color"
-        android:textSize="@dimen/sp15"
-        tools:text="@string/select_date_text" />
-
-</RelativeLayout>
+<com.rescribe.doctor.ui.customesViews.CustomTextView xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/text"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:padding="@dimen/dp8"
+android:drawablePadding="@dimen/dp16"
+android:textColor="@color/about_doctor_color"
+android:textSize="@dimen/sp16"
+android:textStyle="normal"
+app:customFont="@string/roboto_medium"
+tools:text="@string/select_date_text" />
