--- a/app/src/main/res/layouts/patient/patient_appointment/layout/dialog_select_location_waiting_list_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/dialog_select_location_waiting_list_layout.xml
@@ -3,16 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/transparent"
-    android:orientation="vertical">
+    android:gravity="center"
+    android:layout_gravity="center"
+    android:layout_centerInParent="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginLeft="@dimen/dp20"
         android:layout_marginRight="@dimen/dp20"
         android:background="@color/transparent"
-        android:gravity="center"
         android:orientation="vertical">
 
         <FrameLayout
